--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@types/react-dom": "^19.1.6",
     "appwrite": "^18.2.0",
     "astro": "^5.11.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
